--- a/laokou-common/laokou-common-freemarker/pom.xml
+++ b/laokou-common/laokou-common-freemarker/pom.xml
@@ -21,11 +21,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>laokou-common</artifactId>
-        <groupId>org.laokou</groupId>
+        <groupId>io.github.koushenhai</groupId>
         <version>3.0.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.laokou</groupId>
     <artifactId>laokou-common-freemarker</artifactId>
 
     <dependencies>
@@ -34,7 +33,7 @@
             <artifactId>spring-boot-starter-freemarker</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.laokou</groupId>
+            <groupId>io.github.koushenhai</groupId>
             <artifactId>laokou-common-core</artifactId>
         </dependency>
     </dependencies>
