--- a/laokou-common/laokou-common-p6spy/pom.xml
+++ b/laokou-common/laokou-common-p6spy/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>laokou-common</artifactId>
-        <groupId>org.laokou</groupId>
+        <groupId>io.github.koushenhai</groupId>
         <version>3.0.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -17,7 +17,7 @@
             <artifactId>p6spy</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.laokou</groupId>
+            <groupId>io.github.koushenhai</groupId>
             <artifactId>laokou-common-mybatis-plus</artifactId>
         </dependency>
     </dependencies>
