--- a/laokou-common/laokou-common-redis/pom.xml
+++ b/laokou-common/laokou-common-redis/pom.xml
@@ -20,7 +20,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>org.laokou</groupId>
+        <groupId>io.github.koushenhai</groupId>
         <artifactId>laokou-common</artifactId>
         <version>3.0.5</version>
     </parent>
@@ -40,7 +40,7 @@
             <artifactId>redisson</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.laokou</groupId>
+            <groupId>io.github.koushenhai</groupId>
             <artifactId>laokou-common-core</artifactId>
         </dependency>
     </dependencies>
