--- a/laokou-service/laokou-admin/laokou-admin-server/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-server/pom.xml
@@ -19,12 +19,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
-		<groupId>org.laokou</groupId>
+		<groupId>io.github.koushenhai</groupId>
 		<artifactId>laokou-admin</artifactId>
 		<version>3.0.5</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.laokou</groupId>
+	<groupId>io.github.koushenhai</groupId>
 	<artifactId>laokou-admin-server</artifactId>
 	<description>后台管理模块</description>
     <dependencies>
@@ -33,19 +33,19 @@
 			<artifactId>spring-boot-admin-starter-client</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.laokou</groupId>
+			<groupId>io.github.koushenhai</groupId>
 			<artifactId>laokou-common-shardingsphere</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.laokou</groupId>
+			<groupId>io.github.koushenhai</groupId>
 			<artifactId>laokou-common-p6spy</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.laokou</groupId>
+			<groupId>io.github.koushenhai</groupId>
 			<artifactId>laokou-common-easy-excel</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.laokou</groupId>
+			<groupId>io.github.koushenhai</groupId>
 			<artifactId>laokou-common-oss</artifactId>
 		</dependency>
 		<dependency>
@@ -53,7 +53,7 @@
 			<artifactId>spring-context-support</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.laokou</groupId>
+			<groupId>io.github.koushenhai</groupId>
 			<artifactId>laokou-common-tenant</artifactId>
 		</dependency>
 		<dependency>
@@ -61,27 +61,27 @@
 			<artifactId>spring-boot-starter-undertow</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.laokou</groupId>
+			<groupId>io.github.koushenhai</groupId>
 			<artifactId>laokou-common-cors</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.laokou</groupId>
+			<groupId>io.github.koushenhai</groupId>
 			<artifactId>laokou-common-mybatis-plus</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.laokou</groupId>
+			<groupId>io.github.koushenhai</groupId>
 			<artifactId>laokou-common-seata</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.laokou</groupId>
+			<groupId>io.github.koushenhai</groupId>
 			<artifactId>laokou-common-data-filter</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.laokou</groupId>
+			<groupId>io.github.koushenhai</groupId>
 			<artifactId>laokou-common-data-cache</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.laokou</groupId>
+			<groupId>io.github.koushenhai</groupId>
 			<artifactId>laokou-common-security</artifactId>
 		</dependency>
 		<dependency>
@@ -97,7 +97,7 @@
 			<artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.laokou</groupId>
+			<groupId>io.github.koushenhai</groupId>
 			<artifactId>laokou-common-elasticsearch</artifactId>
 		</dependency>
 		<dependency>
@@ -109,19 +109,19 @@
 			<artifactId>oshi-core</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.laokou</groupId>
+			<groupId>io.github.koushenhai</groupId>
 			<artifactId>laokou-common-log</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.laokou</groupId>
+			<groupId>io.github.koushenhai</groupId>
 			<artifactId>laokou-admin-client</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.laokou</groupId>
+			<groupId>io.github.koushenhai</groupId>
 			<artifactId>laokou-auth-client</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.laokou</groupId>
+			<groupId>io.github.koushenhai</groupId>
 			<artifactId>laokou-flowable-client</artifactId>
 		</dependency>
 		<dependency>
@@ -129,11 +129,11 @@
 			<artifactId>spring-cloud-starter-bootstrap</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.laokou</groupId>
+			<groupId>io.github.koushenhai</groupId>
 			<artifactId>laokou-common-sentinel</artifactId>
 		</dependency>
         <dependency>
-            <groupId>org.laokou</groupId>
+            <groupId>io.github.koushenhai</groupId>
             <artifactId>laokou-im-client</artifactId>
         </dependency>
 		<dependency>
@@ -141,11 +141,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.laokou</groupId>
+			<groupId>io.github.koushenhai</groupId>
 			<artifactId>laokou-common-openfeign</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.laokou</groupId>
+			<groupId>io.github.koushenhai</groupId>
 			<artifactId>laokou-common-dynamic-router</artifactId>
 		</dependency>
 		<dependency>
