--- a/laokou-service/laokou-module/laokou-test/laokou-test-juc/pom.xml
+++ b/laokou-service/laokou-module/laokou-test/laokou-test-juc/pom.xml
@@ -4,10 +4,10 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>laokou-test</artifactId>
-        <groupId>org.laokou</groupId>
+        <groupId>io.github.koushenhai</groupId>
         <version>3.0.5</version>
     </parent>
-    <groupId>org.laokou</groupId>
+    <groupId>io.github.koushenhai</groupId>
     <artifactId>laokou-test-juc</artifactId>
     <dependencies>
         <dependency>
@@ -20,7 +20,7 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.laokou</groupId>
+            <groupId>io.github.koushenhai</groupId>
             <artifactId>laokou-common-cors</artifactId>
         </dependency>
     </dependencies>
