--- a/laokou-service/pom.xml
+++ b/laokou-service/pom.xml
@@ -20,13 +20,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>org.laokou</groupId>
+        <groupId>io.github.koushenhai</groupId>
         <artifactId>laokou-parent</artifactId>
         <version>3.0.5</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.laokou</groupId>
+    <groupId>io.github.koushenhai</groupId>
     <artifactId>laokou-service</artifactId>
     <version>3.0.5</version>
     <packaging>pom</packaging>
