--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,4 +21,4 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Build with Maven
-        run: mvn clean install
+        run: mvn clean package
