--- a/laokou-service/laokou-module/laokou-test/pom.xml
+++ b/laokou-service/laokou-module/laokou-test/pom.xml
@@ -5,11 +5,11 @@
     <parent>
         <artifactId>laokou-module</artifactId>
         <groupId>io.github.koushenhai</groupId>
-        <version>3.0.5</version>
+        <version>3.0.6-M1</version>
     </parent>
     <groupId>io.github.koushenhai</groupId>
     <artifactId>laokou-test</artifactId>
-    <version>3.0.5</version>
+    <version>3.0.6-M1</version>
     <modules>
         <module>laokou-test-netty</module>
         <module>laokou-test-rocketmq</module>
