--- a/laokou-cloud/laokou-gateway/pom.xml
+++ b/laokou-cloud/laokou-gateway/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>io.github.koushenhai</groupId>
         <artifactId>laokou-cloud</artifactId>
-        <version>3.0.5</version>
+        <version>3.0.6-M1</version>
     </parent>
     <groupId>io.github.koushenhai</groupId>
     <artifactId>laokou-gateway</artifactId>
