--- a/laokou-cloud/laokou-monitor/pom.xml
+++ b/laokou-cloud/laokou-monitor/pom.xml
@@ -20,11 +20,11 @@
     <parent>
         <groupId>io.github.koushenhai</groupId>
         <artifactId>laokou-cloud</artifactId>
-        <version>3.0.5</version>
+        <version>3.0.6-M1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>laokou-monitor</artifactId>
-    <description>监控服务</description>
+    <description>服务监控</description>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
