--- a/laokou-cloud/pom.xml
+++ b/laokou-cloud/pom.xml
@@ -20,13 +20,13 @@
     <parent>
         <groupId>io.github.koushenhai</groupId>
         <artifactId>laokou-parent</artifactId>
-        <version>3.0.5</version>
+        <version>3.0.6-M1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.koushenhai</groupId>
     <artifactId>laokou-cloud</artifactId>
-    <version>3.0.5</version>
+    <version>3.0.6-M1</version>
     <packaging>pom</packaging>
     <modules>
         <module>laokou-gateway</module>
