--- a/laokou-common/laokou-common-xxl-job/pom.xml
+++ b/laokou-common/laokou-common-xxl-job/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>laokou-common</artifactId>
         <groupId>io.github.koushenhai</groupId>
-        <version>3.0.5</version>
+        <version>3.0.6-M1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>laokou-common-xxl-job</artifactId>
