--- a/laokou-common/pom.xml
+++ b/laokou-common/pom.xml
@@ -20,11 +20,11 @@
     <parent>
         <groupId>io.github.koushenhai</groupId>
         <artifactId>laokou-parent</artifactId>
-        <version>3.0.5</version>
+        <version>3.0.6-M1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>laokou-common</artifactId>
-    <version>3.0.5</version>
+    <version>3.0.6-M1</version>
     <packaging>pom</packaging>
 
     <modules>
