--- a/laokou-service/laokou-admin/laokou-admin-client/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-client/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>io.github.koushenhai</groupId>
         <artifactId>laokou-admin</artifactId>
-        <version>3.0.5</version>
+        <version>3.0.6-M1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.koushenhai</groupId>
