--- a/laokou-service/laokou-module/laokou-flowable/laokou-flowable-server/pom.xml
+++ b/laokou-service/laokou-module/laokou-flowable/laokou-flowable-server/pom.xml
@@ -21,11 +21,11 @@
     <parent>
         <artifactId>laokou-flowable</artifactId>
         <groupId>io.github.koushenhai</groupId>
-        <version>3.0.5</version>
+        <version>3.0.6-M1</version>
     </parent>
     <groupId>io.github.koushenhai</groupId>
     <artifactId>laokou-flowable-server</artifactId>
-  <version>3.0.6-SNAPSHOT</version>
+  <version>3.0.6-M1</version>
     <dependencies>
         <dependency>
             <groupId>io.github.koushenhai</groupId>
