--- a/laokou-service/laokou-module/laokou-test/laokou-test-juc/pom.xml
+++ b/laokou-service/laokou-module/laokou-test/laokou-test-juc/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>laokou-test</artifactId>
         <groupId>io.github.koushenhai</groupId>
-        <version>3.0.5</version>
+        <version>3.0.6-M1</version>
     </parent>
     <groupId>io.github.koushenhai</groupId>
     <artifactId>laokou-test-juc</artifactId>
