--- a/laokou-service/laokou-module/pom.xml
+++ b/laokou-service/laokou-module/pom.xml
@@ -20,11 +20,11 @@
     <parent>
         <artifactId>laokou-service</artifactId>
         <groupId>io.github.koushenhai</groupId>
-        <version>3.0.5</version>
+        <version>3.0.6-M1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.koushenhai</groupId>
-    <version>3.0.5</version>
+    <version>3.0.6-M1</version>
     <artifactId>laokou-module</artifactId>
     <packaging>pom</packaging>
 
